--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ analytics:
 author:
   name             : "Yu-Huan Wu"
   avatar           : "wyh.jpg"
-  bio              : "Ph.D. Candidate at Nankai University"
-  location         : "Tianjin, China"
+  bio              : "Scientist at IHPC, A*STAR"
+  location         : "Singapore"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=CO-Svo4AAAAJ"
