--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,18 @@
 _site/
 .sass-cache/
 
+# Ignore the directory for local files during development
+local/
+
+# Ignore the Gemfile that is generated
+Gemfile.lock
+
+# Ignore files created by npm
+node_modules
+package-lock.json
+
+# Ignore the vendor file and bundle for alternative installation
+vendor/
+.bundle/
+
 .DS_Store
