--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
+site_theme               : "default"
 title                    : "Yu-Huan Wu"
 title_separator          : "-"
 name                     : &name "Yu-Huan Wu"
