--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Yu-Huan Wu"
 title_separator          : "-"
 name                     : &name "Yu-Huan Wu"
 description              : &description "personal description"
-url                      : https://yuhuan-wu.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://yuhuan-wu.com # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yuhuan-wu/yuhuan-wu.github.io"
 
